update: add vote and reset poll
