# backend/docs/swagger.yaml
@@ -51,6 +51,8 @@ definitions:
         type: integer
       update_time:
         type: string
+      version:
+        type: integer
     type: object
   dto.PollResultResponse:
     properties:
@@ -60,6 +62,15 @@ definitions:
         type: integer
       number_vote:
         type: integer
+    type: object
+  dto.VoteRequest:
+    properties:
+      choice_id:
+        items:
+          type: integer
+        type: array
+    required:
+    - choice_id
     type: object
   entities.Order:
     properties:
@@ -307,6 +318,58 @@ paths:
           schema:
             $ref: '#/definitions/dto.PollResponse'
       summary: Patch poll
+      tags:
+      - polls
+  /polls/{room_id}/reset:
+    post:
+      description: Reset all vote counts to 0 for a specific poll. Only the owner
+        can perform this.
+      parameters:
+      - description: Room ID
+        in: path
+        name: room_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.PollResponse'
+      summary: Reset poll results
+      tags:
+      - polls
+  /polls/{room_id}/votes:
+    post:
+      consumes:
+      - application/json
+      description: Vote on one or more choices in a specific poll room
+      parameters:
+      - description: Room ID
+        in: path
+        name: room_id
+        required: true
+        type: string
+      - description: Vote payload
+        in: body
+        name: vote
+        required: true
+        schema:
+          $ref: '#/definitions/dto.VoteRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/responses.DataResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.PollResponse'
+              type: object
+      summary: Vote on a poll choices
       tags:
       - polls
   /users:
